# ranges-cpp

./: .gitignore  CMakeLists.txt  README.md
libs/: CMakeLists.txt  ranges.h
tests/: CMakeLists.txt  ranges_tests.cpp
